--- a/stylesheets/pages/template.css
+++ b/stylesheets/pages/template.css
@@ -86,7 +86,7 @@ ul {
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
-.navigation__list i {
+i {
   margin-left: 20px;
   margin-right: 4px;
 }
@@ -100,7 +100,6 @@ li {
   height: 30px;
   display: flex;
   align-items: center;
-  vertical-align: middle;
 }
 
 .navigation__list li:first-child {
@@ -121,17 +120,8 @@ li {
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
-.two-depth {
-  z-index: 1;
-}
-
-.three-depth {
-  z-index: 2;
-}
-
-.two-depth > li,
-.three-depth > li {
-  margin-left: 25px;
+.two-depth span {
+  margin-left: 20px;
 }
 
 .two-depth::before,
@@ -139,7 +129,7 @@ li {
   content: "";
   position: absolute;
   left: 0px;
-  width: 10px;
+  width: 3px;
   height: 500px;
   background-color: var(--color-white);
 }
@@ -158,7 +148,7 @@ li {
 
 a.is--active {
   background: url("/assets/icon/more-right-active.svg") right no-repeat;
-  background-position: 130px 2px;
+  background-position: right;
   color: var(--color-blue-600);
   font-weight: 700;
 }
@@ -173,7 +163,6 @@ a.is--active {
 
 .one-depth-link:focus ~ .two-depth,
 .two-depth-link:focus ~ .three-depth {
-  /* font-weight: 100; */
   visibility: visible;
 }
 
@@ -217,6 +206,7 @@ a.is--active {
   height: 40px;
   background-color: var(--color-gray-200);
   display: flex;
+  /* `display: flex;`를 사용해 .guide-background의 세로를 플렉스 아이템인 .guide로 채움! */
 }
 
 .guide {
@@ -229,6 +219,11 @@ a.is--active {
 
 .guide-txt {
   padding: 5px 14px 6px 14px;
+}
+
+.divider {
+  position: relative;
+  top: -2px;
 }
 
 .personal-information {
@@ -269,8 +264,17 @@ a.is--active {
 .customer div:first-child {
   width: 102px;
   font-weight: 700;
-  border-right: 1px solid var(--color-gray-800);
-  margin-right: 15px;
+}
+
+.border-for-divider {
+  width: 1px;
+  height: 12px;
+  margin-top: 5px;
+  background-color: var(--color-gray-800);
+}
+
+.customer div:last-child {
+  margin-left: 15px;
 }
 
 .tel {
