--- a/stylesheets/pages/template.css
+++ b/stylesheets/pages/template.css
@@ -1,25 +1,9 @@
+/* 1. 전체 */
 body {
   font-family: var(--font-family);
   font-weight: 400;
   font-size: 12px;
   line-height: 120%;
-  /* 폰트 사이즈가 바뀐다면 line-height도 그 때 같이 바꿔줘야함!!! */
-  /* 안 그러면 큰 폰트, 작은 폰트에 상관없이 14.4px이 유지되어버림...  */
-}
-/* ---------------------------------------------- */
-/* 헤더                                            */
-/* ---------------------------------------------- */
-.header {
-  display: flex;
-  justify-content: center;
-  width: 1920px;
-  height: 117px;
-  border-bottom: 1px solid var(--color-gray-100);
-}
-
-.header__inner {
-  width: 1020px;
-  height: 116px;
 }
 
 .sr-only {
@@ -29,11 +13,25 @@ body {
   height: 1px;
 }
 
+/* 2. 헤더 */
+header {
+  display: flex;
+  justify-content: center;
+  width: 1920px;
+  height: 117px;
+  border-bottom: 1px solid var(--color-gray-100);
+}
+
+.header__inner {
+  width: 1020px;
+  height: 118px;
+}
+
 .button--category {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
+  align-items: center;
   width: 110px;
   height: 116px;
   border: none;
@@ -45,28 +43,13 @@ body {
   margin-top: 12px;
 }
 
-.button--category:focus-visible {
-  outline: none;
-  border-radius: 4px;
-  box-shadow: 0px 0px 0px 1px var(--color-red-500) inset;
-}
-
-/* ---------------------------------------------- */
-/* 내비게이션                                        */
-/* ---------------------------------------------- */
-.navigation {
+/* 3. 내비게이션 */
+nav {
   position: relative;
   left: 450px;
   width: 540px;
   height: 500px;
   margin: 0px;
-}
-
-h2 {
-  position: absolute;
-  overflow: hidden;
-  width: 1px;
-  height: 1px;
 }
 
 ul {
@@ -79,7 +62,6 @@ ul {
 }
 
 .navigation__list {
-  position: relative;
   width: 180px;
   height: 500px;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
@@ -124,23 +106,11 @@ li {
   margin-left: 20px;
 }
 
-.two-depth::before,
-.three-depth::before {
-  position: absolute;
-  left: 0px;
-  width: 3px;
-  height: 500px;
-  background-color: var(--color-white);
-  content: "";
-}
-
-/* 👇👇👇Active */
-.navigation,
+nav,
 .two-depth,
 .three-depth {
   visibility: hidden;
 }
-/* 주의:`is--active{visibility: visible;}` 뒤에 위치하면 is--active 클래스가 정상동작하지 않음!!! */
 
 .is--active {
   visibility: visible;
@@ -151,6 +121,12 @@ a.is--active {
   background-position: right;
   color: var(--color-blue-600);
   font-weight: 700;
+}
+
+.one-depth-link,
+.two-depth-link {
+  display: block;
+  width: 150px;
 }
 
 .one-depth-link:focus,
@@ -172,25 +148,14 @@ a.is--active {
   font-weight: 700;
 }
 
-.one-depth-link,
-.two-depth-link {
-  display: block;
-  width: 150px;
-}
-
-/* ---------------------------------------------- */
-/* 메인 콘텐츠                                       */
-/* ---------------------------------------------- */
-/* 메인 콘텐츠 영역의 최소 높이 설정 */
+/* 4. 메인 콘텐츠 */
 .main {
   min-height: 52rem;
 }
 
-/* ---------------------------------------------- */
-/* 푸터                                            */
-/* ---------------------------------------------- */
+/* 5. 푸터 */
 
-.footer {
+footer {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -199,11 +164,9 @@ a.is--active {
   height: 349px;
 }
 
-/* 👇👇👇Guide */
+/* 5.1. 푸터 - 가이드 */
 
 .guide-background {
-  display: flex;
-  /* .guide-background의 세로를 플렉스 아이템인 .guide로 채움! */
   width: 1920px;
   height: 40px;
   background-color: var(--color-gray-200);
@@ -213,12 +176,13 @@ a.is--active {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 3px auto 2px auto;
+  height: 40px;
+  margin: 0px auto;
   color: var(--color-gray-800);
 }
 
 .guide-txt {
-  padding: 5px 14px 6px 14px;
+  padding: 0px 14px;
 }
 
 .divider {
@@ -230,7 +194,7 @@ a.is--active {
   font-weight: 700;
 }
 
-/* 👇👇👇Information */
+/* 5.2. 푸터 - 인포메이션 */
 
 .information-background {
   width: 1920px;
@@ -299,7 +263,7 @@ a.is--active {
   font-weight: 700;
 }
 
-/* 👇👇👇Copyright,SNS */
+/* 5.3. 푸터 - 저작권,SNS */
 .copyright-and-sns-background {
   width: 1920px;
   height: 102px;
